--- a/src/lib/css/Moovies.css
+++ b/src/lib/css/Moovies.css
@@ -163,13 +163,90 @@ h2 i {
 }
 
 p {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.6;
     color: #ffffff;
     background-color: rgba(34, 33, 33, 0.5);
     padding: 10px;
     border-radius: 8px;
     margin: 10px 0;
+}
+
+.favorites,
+.watched {
+    margin-block-start: 20px;
+}
+
+.favorites h3,
+.watched h3 {
+    font-size: 25px;
+    color: #dae4b7;
+}
+
+.movie-actions {
+    margin-block-start: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.movie-actions button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    transition: transform 0.3s ease;
+}
+
+.movie-actions button:hover {
+    transform: scale(1.2);
+}
+
+.favorites,
+.watched {
+    margin-block-start: 50px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    inset-block-start: 20px;
+    inset-inline-start: 50%;
+    transform: translateX(-50%);
+    font-family: "Arial", sans-serif;
+    z-index: 1000;
+}
+
+.pagination button {
+    background-color: #f8d568;
+    border: 1px solid #d4af37;
+    padding: 10px 20px;
+    margin: 0 15px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.pagination button:hover {
+    background-color: #d4af37;
+    transform: scale(1.05);
+}
+
+.pagination button:disabled {
+    background-color: #e5e5e5;
+    color: #b0b0b0;
+    cursor: not-allowed;
+}
+
+.pagination span {
+    font-size: 18px;
+    margin: 0 10px;
+    font-weight: bold;
+    color: #d4af37;
 }
 
 @media (max-width: 768px) {
