--- a/src/lib/css/Moovies.css
+++ b/src/lib/css/Moovies.css
@@ -249,6 +249,102 @@ p {
     color: #d4af37;
 }
 
+.modal-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    inset-block-start: 0;
+    inset-inline-start: 0;
+    inset-inline-end: 0;
+    inset-block-end: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    padding: 20px;
+}
+
+.modal-content {
+    background: white;
+    border-radius: 12px;
+    overflow: hidden;
+    inline-size: 80%;
+    max-inline-size: 900px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.modal-header {
+    inline-size: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #333;
+    color: white;
+}
+
+.close-button {
+    background: #e74c3c;
+    color: white;
+    border: none;
+    font-size: 18px;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.movie-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+    padding-inline-start: 10px;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.movie-poster {
+    inline-size: 300px;
+    block-size: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+}
+
+.movie-details {
+    flex: 1;
+    font-size: 16px;
+    color: #333;
+}
+
+.movie-details p {
+    margin-block-end: 10px;
+}
+
+.movie-details strong {
+    color: #e74c3c;
+}
+
+.flag-container {
+    display: flex;
+    align-items: center;
+    margin-block-start: 20px;
+}
+
+.country-flag {
+    inline-size: 30px;
+    block-size: auto;
+    margin-inline-end: 10px;
+}
+
 @media (max-width: 768px) {
     .genre-selection button {
         font-size: 14px;
